--- a/A_dbms/templates/dbms/custom/custom/custom-filter.html
+++ b/A_dbms/templates/dbms/custom/custom/custom-filter.html
@@ -33,7 +33,7 @@
 
     <label class="pull-right">
 
-        <a class="btn btn-success btn-sm" id="addCustom">
+        <a class="btn btn-primary btn-sm" id="addCustom">
             添加客户
         </a>
     </label>
