--- a/A_dbms/templates/dbms/custom/scan/custom-summry.html
+++ b/A_dbms/templates/dbms/custom/scan/custom-summry.html
@@ -12,7 +12,7 @@
                 <a class="btn btn-primary btn-sm " id="editCustom">修改 </a><!--#path('custom/edit/'-->
                 <a class="btn btn-danger btn-sm " id="delCustom">删除</a><!--#path('custom/del/'-->
             {% endif %}
-            {% if PAGE_TITLE == '保后管理' %}
+            {% if PAGE_TITLE == '保后详情' %}
                 <a class="btn btn-primary btn-sm " id="reviewPlanB">保后计划</a><!--#path('custom/del/'-->
                 <a class="btn btn-primary btn-sm " id="autoReviewB">自主保后</a><!--#path('custom/del/'-->
             {% endif %}
