--- a/A_dbms/templates/dbms/dun/compensatory/compensatory-filter.html
+++ b/A_dbms/templates/dbms/dun/compensatory/compensatory-filter.html
@@ -22,4 +22,7 @@
             <button type="submit" class="btn btn-primary btn-sm">搜索</button>
         </form>
     </label>
+    <label>
+        代偿总额：{{ flow_amount }}
+    </label>
 </div>
