--- a/A_dbms/templates/dbms/dun/dun/dun-filter.html
+++ b/A_dbms/templates/dbms/dun/dun/dun-filter.html
@@ -22,6 +22,9 @@
             <button type="submit" class="btn btn-primary btn-sm">搜索</button>
         </form>
     </label>
+    <label>
+        追偿总额：{{ dun_amount }}，回款总额：{{ dun_retrieve_sun }}<!--，费用总额：{{ dun_charge_sun }}-->
+    </label>
     <label class="pull-right"><a class="btn btn-primary btn-sm" id="addDunB">新建追偿</a></label>
 
 </div>
