--- a/A_dbms/templates/dbms/dun/dun/dun-table.html
+++ b/A_dbms/templates/dbms/dun/dun/dun-table.html
@@ -2,8 +2,8 @@
     <table class="table table-bordered table-hover table-condensed active">
         <thead>
         <tr style="text-align: center">
-            <th>代偿编号</th>
-            <th>追偿本金</th>
+            <th>追偿编号</th>
+            <th>追偿金额</th>
             <th>追偿费用</th>
             <th>回收金额</th>
             <th>状态</th>
