--- a/A_dbms/templates/dbms/dun/seal/seal-filter.html
+++ b/A_dbms/templates/dbms/dun/seal/seal-filter.html
@@ -1,18 +1,18 @@
 <div>
     <label>
         {% if kwargs.seal_state == None %}
-            <a class="active btn btn-primary btn-sm" href="{% url 'dbms:seal_all' %}">全部</a>
+            <a class="active btn btn-primary btn-sm" href="{% url 'dbms:dun_seal_all' %}">全部</a>
         {% else %}
-            <a class="btn btn btn-primary btn-sm" href="{% url 'dbms:seal_all' %}">全部</a>
+            <a class="btn btn btn-primary btn-sm" href="{% url 'dbms:dun_seal_all' %}">全部</a>
         {% endif %}
         {# 方式一：#}
         {% for seal_state in seal_state_list %}
             {% if seal_state.0 == kwargs.seal_state %}
                 <a class="active btn btn-primary btn-sm"
-                   href="{% url 'dbms:seal' seal_state=seal_state.0 %}">{{ seal_state.1 }} </a>
+                   href="{% url 'dbms:dun_seal' seal_state=seal_state.0 %}">{{ seal_state.1 }} </a>
             {% else %}
                 <a class="btn btn-primary btn-sm"
-                   href="{% url 'dbms:seal' seal_state=seal_state.0 %}">{{ seal_state.1 }}</a>
+                   href="{% url 'dbms:dun_seal' seal_state=seal_state.0 %}">{{ seal_state.1 }}</a>
             {% endif %}
         {% endfor %}
     </label>
