--- a/A_dbms/templates/dbms/agree/scan/agree-summry-body.html
+++ b/A_dbms/templates/dbms/agree/scan/agree-summry-body.html
@@ -1,20 +1,25 @@
 <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
     合同编号：{{ agree_obj.agree_num }}</label>
 <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-    客户名称：{{ agree_obj.lending.summary.custom.name }}</label>
+    客户名称：{{ agree_obj.lending.summary.custom.short_name }}</label>
 <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-    放款银行：{{ agree_obj.branch.name }}</label>
+    放款银行：{{ agree_obj.branch.short_name }}</label>
 <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
     合同种类：{{ agree_obj.get_agree_typ_display }}</label>
 <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
     合同金额：{{ agree_obj.agree_amount }}</label>
 <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-    通知金额：{{ agree_obj.agree_notify_sum }}</label>
+    放款限额：{{ agree_obj.amount_limit }}</label>
 <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-    放款金额：{{ agree_obj.agree_provide_sum }}</label>
-<label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-    还款金额：{{ agree_obj.agree_repayment_sum }}</label>
+    期限（月）：{{ agree_obj.agree_term }}</label>
 <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
     签批日期：{{ agree_obj.agree_sign_date }}</label>
-<label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-    合同状态：{{ agree_obj.get_agree_state_display }}</label>
+{#<label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">#}
+{#    合同状态：{{ agree_obj.get_agree_state_display }}</label>#}
+{##}
+{#<label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">#}
+{#    通知金额：{{ agree_obj.agree_notify_sum }}</label>#}
+{#<label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">#}
+{#    放款金额：{{ agree_obj.agree_provide_sum }}</label>#}
+{#<label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">#}
+{#    还款金额：{{ agree_obj.agree_repayment_sum }}</label>#}
