--- a/A_dbms/templates/dbms/article/article-scan-lending.html
+++ b/A_dbms/templates/dbms/article/article-scan-lending.html
@@ -1,6 +1,6 @@
 {% extends 'dbms/index_dbms.html' %}
 
-{% block title %}{{ lending_obj }}{% endblock %}
+{% block title %}{{ PAGE_TITLE }}:{{ lending_obj }}{% endblock %}
 
 {% block right-content-container %}
 
