--- a/A_dbms/templates/dbms/dun/seal/seal-table.html
+++ b/A_dbms/templates/dbms/dun/seal/seal-table.html
@@ -13,7 +13,7 @@
         <tbody>
         {% for seal in p_list %}
             <tr>
-                <td><a href="{% url 'dbms:seal_scan' dun_id=seal.dun.id warrant_id=seal.warrant.id %}">
+                <td><a href="{% url 'dbms:dun_seal_scan' dun_id=seal.dun.id warrant_id=seal.warrant.id %}">
                     {{ seal.warrant.warrant_num }}</a></td>
                 <td>{{ seal.dun.title }}</td>
                 <td>{{ seal.get_seal_state_display }}</td>
