--- a/A_dbms/templates/dbms/dun/seal_scan/dun-seal-tab.html
+++ b/A_dbms/templates/dbms/dun/seal_scan/dun-seal-tab.html
@@ -2,7 +2,7 @@
     <!-- Nav tabs -->
     <ul class="nav nav-tabs" role="tablist" style="background-color: #f5f5f5">
 
-        <li role="presentation">
+        <li role="presentation" class="active">
             <a href="#seal_up" style="background-color: #f5f5f5"
                aria-controls="profile" role="tab" data-toggle="tab">查封详情</a></li>
         <li role="presentation">
@@ -13,7 +13,7 @@
     </ul>
     <!-- Tab panes -->
     <div class="tab-content">
-        <div role="tabpanel" class="tab-pane" id="seal_up"> <!--查封详情-->
+        <div role="tabpanel" class="tab-pane active" id="seal_up"> <!--查封详情-->
             {% include 'dbms/dun/seal_scan/tab/sealup.html' %} </div>
         <div role="tabpanel" class="tab-pane" id="search"> <!--查询详情-->
             {% include 'dbms/dun/seal_scan/tab/agent.html' %} </div>
