--- a/A_dbms/templates/dbms/provide/agree/scan/tab/provide-article.html
+++ b/A_dbms/templates/dbms/provide/agree/scan/tab/provide-article.html
@@ -12,7 +12,7 @@
         </thead>
         <tbody id="provide-notify-tb">
         <tr article-nid="{{ agree_obj.lending.summary.id }}">
-            <td><a target="_blank" href="{% url 'dbms:article_scan_all' article_id=agree_obj.lending.summary.id %}">
+            <td><a target="_blank" href="{% url 'dbms:article_scan' article_id=agree_obj.lending.summary.id %}">
                 {{ agree_obj.lending.summary.summary_num }}</a></td>
             <td>{{ agree_obj.lending.get_order_display }}</td>
             <td>{{ agree_obj.lending.summary.amount }}</td>
