--- a/A_dbms/templates/dbms/review/review.html
+++ b/A_dbms/templates/dbms/review/review.html
@@ -1,6 +1,6 @@
 {% extends 'dbms/index_dbms.html' %}
 
-{% block title %}保后管理{% endblock %}
+{% block title %}{{ PAGE_TITLE }}{% endblock %}
 
 
 {% block right-content-container %}
