--- a/A_dbms/templates/dbms/review/review/review-table.html
+++ b/A_dbms/templates/dbms/review/review/review-table.html
@@ -19,7 +19,7 @@
                 {% if PAGE_TITLE == '客户管理' %}
                     <td><a href="{% url 'dbms:custom_scan' custom_id=custom.id %}">{{ custom.short_name }}</a></td>
                 {% endif %}
-                {% if PAGE_TITLE == '保后管理' %}
+                {% if PAGE_TITLE == '保后管理' or PAGE_TITLE == '逾期保后' %}
                     <td><a href="{% url 'dbms:review_scan' custom_id=custom.id %}">{{ custom.short_name }}</a></td>
                 {% endif %}
                 <td align="right">{{ custom.credit_amount }}</td>
