--- a/A_dbms/templates/dbms/article/scan/article-summry.html
+++ b/A_dbms/templates/dbms/article/scan/article-summry.html
@@ -2,7 +2,7 @@
     <div class="panel-heading">
         <label>项目情况</label>
         <label class="navbar-right">
-            {% if  PAGE_TITLE == '查看项目' %}
+            {% if  PAGE_TITLE == '项目详情' %}
                 {% if 'article_feedback_ajax' in authority_list %}
                     <a class="btn btn-primary btn-sm " id="feedbackArticle">反馈</a><!--#path('article/del/'-->
                 {% endif %}
