--- a/A_dbms/templates/dbms/board/agree/maximum-agree.html
+++ b/A_dbms/templates/dbms/board/agree/maximum-agree.html
@@ -1,183 +1,244 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<p>合同编号：{{ agree_obj.agree_num }}</p>
+{% extends 'base.html' %}
 
-<p>最高额委托保证合同</p>
+{% block title %}{{ agree_obj.agree_num }}{% endblock %}
+{% block extra-css %}
+    <style>
+        .container {
+            width: 210mm;
+            margin-left: auto;
+            margin-right: auto;
+            font-size: 14px;
+        }
+
+        p {
+            text-indent: 32px;
+        }
+
+        .split {
+
+            page-break-after: always;
+
+        }
+
+        .agree-title {
+            text-align: center;
+            font-size: 22px;
+            padding-top: 50px;
+            padding-bottom: 50px;
+        }
+
+        .page-table > p {
+            padding-top: 25px;
+        }
+
+        .page-table-1 {
+            font-size: 14px;
+            padding-top: 50px;
+            padding-bottom: 50px;
+        }
+
+        .page-table-2 {
+            font-size: 14px;
+            padding-top: 50px;
+        }
+
+    </style>
+{% endblock %}
+
+{% block body %}
+    <div class="container">
+        <div class="split">
+            <p align="right">合同编号：<u>{{ agree_obj.agree_num }}</u></p>
+            <p class="agree-title">最高额委托保证合同</p>
+            <div class="page-table">
+                <div class="page-table-1">
+                    <p>担保方（甲方）：成都武侯中小企业融资担保有限责任公司</p>
+                    <p>住所（地址）：成都市武侯区武青南路33号(武侯新城管委会内)</p>
+                    <p>法定代表人：何长见</p>
+                </div>
+                <div class="page-table-2">
+                    <p>被担保方（乙方）：<strong><u>{{ agree_obj.lending.summary.custom.name }}</u></strong></p>
+                    <p>住所（地址）：
+                        <strong><u>{{ agree_obj.lending.summary.custom.company_custome.registered_addr }}</u></strong>
+                    </p>
+                    <p>法定代表人：
+                        <strong><u>{{ agree_obj.lending.summary.custom.company_custome.representative }}</u></strong>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="split">
+            <p>根据乙方申请，甲方决定为乙方在<strong><u>{{ agree_obj.branch.name }}</u></strong>的一系列债务（包括借款或承
+                兑汇票、保函等）提供连带责任保证担保。为明确各自的权利、义务，甲乙双方遵照有关法律规定，经协商一致，订立本合
+                同，以便共同遵守执行。
+            </p>
+            <p>一、甲乙双方遵循平等、自愿、公平、诚实信用原则订立本合同。</p>
+            <p>二、甲方同意为乙方自______年___月___日______至___年___月
+                日期间，向债权人（或受益人）<strong><u>{{ agree_obj.branch.name }}</u></strong>申请限额（即最高额限额）为人
+                民币<strong><u>{{ agree_obj.agree_amount }}</u></strong>万元（大写：_________________）的一系列债务（包括但不限于：人民币借款、银行承兑汇票扣除保证金后的差额票款、保函等）提供担保。上述一系列债务的保证合同包括但不限于：
+            </p>
+
+            <p>（一）担保范围：与甲方与债权人（或受益人）自______年___月___日至______年___月___日期间签订的一系列保证合同或保函一致。</p>
+            <p>
+                （二）担保期限：与甲方与债权人（或受益人）自______年___月___日至______年___月___日期间签订的每笔保证合同或保函中约定的保证期间一致，但担保期限不超过限期内最后一笔债务履行期届满之日后两年。</p>
+            <p>（三）乙方在办理最高额限额内的每笔融资业务时，应提前向甲方申请，经甲方审批同意后再与债权银行签订相关合同或出具放款通知书后方可使用。</p>
+            <p>超出以上限额和期限以及未经甲方认可同意的任何款项，甲方不承担担保责任。</p>
+            <p>三、甲方可根据乙方的信用情况，向乙方收取人民币____________元（大写：__________________
+                元整）担保风险保证金，并由乙方在本合同签订后3个工作日内支付至甲方指定账户。在乙方完全履行完由甲方担保的债务后，甲方将上述保证金无息退还乙方，如乙方不履行债务，上述保证金将作为违约金，甲方不予退还。</p>
+            <p>四、甲方代乙方履行付款责任后，乙方应立即向甲方归还下列款项：</p>
+            <p>（一）甲方向银行代付的金额和自代付之日起的利息。</p>
+            <p>（二）甲方实现债权的调查、诉讼、律师费用及其它损失。</p>
+            <p>五、甲方有权在代付范围内，接管一切为债权而设立的任何担保物及其它向乙方债务提供反担保的求偿权，乙方应该履行其作为债务人所应履行的一切义务。</p>
+            <p>乙方向甲方提供的全部反担保行为对甲方为乙方在上述期间发生的每一笔担保均承担反担保责任。</p>
+            <p>六、担保综合费的收取</p>
+            <p>（一）收取标准：按以下第 4） 项收取担保综合费：</p>
+            <p>1）担保品种为人民币借款时，每年按担保本金总额的 收取，不足一年的，按一年收取；</p>
+            <p>2）担保品种为银行承兑汇票时，3个月期限承兑每次按担保总额的 /年一次性收取，6个月期限承兑每次按担保总额的 /年/次收取；</p>
+            <p>3）担保品种为保函时：A、按次收取：每次按担保敞口总额的 %收取；B、按担保时间收取：每月按担保敞口总额的 % 收取。C、按年收取：每年按担保敞口总额的 %收取；</p>
+            <p>4）按以下约定执行：按担保本金总额的2.1%/年收取[含税]，不足一年的，按一年收取。</p>
+            <p>（二）具体数额：按以下第 2）项执行：</p>
+            <p>1）一次收取担保综合费金额为：人民币 ；</p>
+            <p>2）按签订《同意放款确认书》或《保证合同》、《保函》时确认的担保额度以本合同确定的担保综合费率计算收取；</p>
+            <p>3）如担保债务有中长期贷款，则分别为：第一年 万元；第二年 万元；第三年 万元、第四年 万元；第五年 万元；</p>
+            <p>4） 。</p>
+            <p>（三）收取时间：按以下第 2） 项执行：</p>
+            <p>1）乙方于甲方与债权银行或受益人签订《保证合同》前将该笔担保所涉及的担保综合费款项支付给甲方；</p>
+            <p>2）乙方于甲方每次向债权方出具《同意放款确认书》前将该笔担保所涉及的担保综合费款项支付给甲方；</p>
+            <p>3）于担保期内每年的 月 日前支付当年的担保综合费；</p>
+            <p>4）乙方于 前将该笔担保所涉及的担保综合费款项支付给甲方；</p>
+            <p>5） 。</p>
+            <p>（四）收取方式：现金或转账支付。</p>
+            <p>
+                （五）乙方未在上述规定的时间内按时足额支付担保综合费的，甲方有权在乙方足额支付担保综合费之前拒绝与其债权人签订担保合同，乙方应按未付担保综合费金额的0.08%/日支付违约金。担保期内，乙方提前履行甲方担保债务，甲方所收担保费皆不退还。</p>
+            <p>七、甲方的权利义务</p>
+            <p>（一）甲方有权对乙方的经营情况及借款的使用情况进行检查和了解。</p>
+            <p>（二）甲方有权按照本合同第三条、第六条约定向乙方按时足额收取保证金、担保费。</p>
+            <p>（三）甲方应对乙方提供的有关乙方的资料、文件、信息保密，但法律、法规规定的，司法、仲裁或其他类似程序或有关监督部门和其他有权机构要求披露的或本合同另有约定的除外。</p>
+            <p>八、乙方的权利义务</p>
+            <p>（一）乙方必须按其与债权银行签订的借款合同及其他债权文件（以下简称“主债权合同”）约定的还款方式、时间、数额严格执行还款计划。</p>
+            <p>
+                （二）担保期间，乙方应当每季度末结束后15日内向甲方提供资产负债表、损益表及现金流量表等财务报告及财务状况说明书。甲方可定期或不定期对乙方的生产、经营及财务状况及资金使用情况进行监督，乙方应积极配合，不得以任何理由推诿、搪塞。</p>
+            <p>（三）未经甲方书面同意，不得擅自与债权银行方修改主债权合同。</p>
+            <p>（四）担保期间，乙方因经营、资产变动、行政处罚、诉讼等重大事项，可能增加甲方的担保风险或加重甲方担保责任情形的，应立即通知甲方。</p>
+            <p>（五）债权银行通知甲方代偿乙方的债务时，甲方不需经乙方同意即可代偿。</p>
+            <p>（六）实施以下行为之一的，乙方应提前三十日书面通知甲方并征得甲方书面同意：</p>
+            <p>1）乙方改变经营决策，包括但不限于转股、改组、合并、分立、股份制改造、合资、合作、联营、承包、租赁、经营范围和注册资本变更等可能影响甲方权益的情形；</p>
+            <p>2）乙方举借新债、对外担保等实施可能影响甲方作为保证人利益的其他重大经营决策时；</p>
+            <p>3）乙方出租、出售、转移、转让其甲方认为足以影响其偿债能力的财产或/和其合法财产性权利的。</p>
+            <p>九、乙方向甲方提供反担保时，应签订相应的《最高额抵押反担保合同》、《最高额质押反担保合同》、《最高额保证反担保合同》并承诺下述事项：</p>
+            <p>（一）与财产抵押物、质押物、保证相关的一切费用，包括但不限于评估、保险、鉴定、登记、保管、公证等费用均由乙方承担。</p>
+            <p>
+                （二）乙方负责办理抵押物在抵押期间的财产保险，并应如实告知保险人被保险财产已经抵押给甲方的事实，且要求保险人以保险批单形式予以注明相关信息和未经甲方同意，保险人不得直接将保险金给付乙方的意思表示的承诺。保险单由甲方代为保管。乙方投保的保险期间期限至少应长于票据及贷款期限六个月（若乙方担保的票据及贷款系分批到期，则保险期间至少应长于最后一笔到期后六个月）。</p>
+            <p>（三）《最高额抵押反担保合同》、《最高额质押反担保合同》项下反担保的抵押物、质押物价值减少时，乙方应在三十日内向甲方提供甲方认可的，与该抵押物、质押物减少的价值额相当的新担保。</p>
+            <p>（四）乙方向甲方提供的所有反担保措施落实前，未经甲方确认，乙方不得使用上述贷款。</p>
+            <p>
+                十、抵押、质押期间，抵押物、质押物如发生投保范围的损失，或者因其他第三人行为导致抵押物价值减少，保险赔偿金或损害赔偿金应作为抵押、质押物，由乙方存入甲方指定的账户，抵押、质押期间，未经甲方书面同意，乙方不得单方面动用。</p>
+            <p>十一、由第三人为乙方向甲方提供财产进行反担保的，本合同第九条所列之条款由乙方和第三人承担履行责任。</p>
+            <p>十二、合同的变更和解除</p>
+            <p>（一）本合同生效后，甲乙任何一方不得擅自变更和解除本合同。</p>
+            <p>（二）未经甲方书面同意，乙方不得采取任何方式转移或者变相转移本合同项下的权利、义务。</p>
+            <p>（三）乙方如将本合同项下的权利、义务转让给第三方，应事先经甲方书面同意，其转让行为在受让单位和甲方重新签订协议书后生效。</p>
+            <p>（四）甲乙任何一方发生合并、分立、承包及股份制改造等转制变更时，由变更后法人承担或连带承担履行本合同的义务，享有应有的权利。</p>
+            <p>十三、违约责任</p>
+            <p>（一）本合同生效后，甲乙双方均应履行本合同约定的义务，任何一方不履行或不完全履行本合同约定义务的，应当承担相应的违约责任。</p>
+            <p>（二）在本合同履行过程中，如发生以下情形之一的，即视为乙方违约，乙方应向甲方支付本合同约定担保最高限额的5%的违约金。</p>
+            <p>1）乙方不履行本合同约定的任何一项义务；</p>
+            <p>2）乙方违反主债权合同约定，致使甲方代偿的；</p>
+            <p>3）乙方没有按期偿还与主债权合同项下的贷款本金、利息；</p>
+            <p>4）乙方向甲方提供的所有反担保措施未落实前，未经甲方确认，乙方擅自使用上述贷款的；</p>
+            <p>5）向甲方提供财产担保的乙方（或第三人）违反财产担保协议或担保财产明显贬值，乙方又无法落实甲方认可的新的担保财产时；</p>
+            <p>6）乙方向甲方提供虚假资料，骗取甲方提供担保的；</p>
+            <p>7）乙方出现欠息、经营状态明显恶化、发生严重安全、质量、公共事故，或其他突发事件、涉诉或重大法律纠纷、拖欠职工工资、财务指标异常或恶化、资金大量异常移动
+                、企业非正常停产、企业负责人失去联系、企业骨干多人离职等不安事项；</p>
+            <p>8）乙方及财产担保人发生了其他足以影响其偿债能力或缺乏偿债诚意的状况及行为；</p>
+            <p>9）乙方违反主债权合同的约定或者发生主债权合同项下的违约事项，致使银行要求甲方承担担保责任的；</p>
+            <p>10）乙方发生危及、损害或可能危及、损害甲方权益的其他事项。</p>
+            <p>（三）乙方不履行本协议第七条、第八条、第九条，以及出现上述第十三条第二款情形之一，甲方有权行使下述一项或几项措施，乙方对此没有异议:</p>
+            <p>1）要求乙方、担保人限期纠正其违约行为；</p>
+            <p>2）要求乙方赔偿因违约而给甲方造成的损失；</p>
+            <p>3）要求乙方支付甲方本合同约定担保最高限额的5%的违约金；</p>
+            <p>
+                4）要求乙方在甲方规定的期限内提前偿还全部借款本息，同时有权要求贷款银行停止发放尚未划付的贷款、提前收回已发放的贷款本息，如贷款银行怠于提前收贷，或乙方资金不能保证提前偿还全部借款本息时，甲方有权在约定担保责任范围内提前对乙方进行诉讼追偿并采取财产保全措施或处置担保财产，乙方不能以任何理由抗辩；</p>
+            <p>5）甲方代乙方履行付款责任后，要求乙方立即归还下列款项：</p>
+            <p>甲方向银行代偿的金额和自代偿之日起的利息（按银行同期贷款基准利率 4 倍计息）；</p>
+            <p>甲方因实现债权所发生的各项费用（包括但不限于诉讼费、差旅费、律师费、财产保全费、公证费、鉴定费、翻译费、评估拍卖费等）；</p>
+            <p>（四）在本合同履行过程中，如因乙方违反本合同、反担保合同约定，致使银行贷款不予/不能发放或乙方主动放弃银行贷款的，乙方应向甲方支付拟贷款金额1%的尽职调查费，甲方可以从乙方已缴纳的担保费用中直接扣除。</p>
+            <p>十四、甲方代乙方履行清偿义务后，甲方有权以抵押物折价或从拍卖、变卖抵押物所得价款中优先受偿。</p>
+            <p>（一）分配顺序如下：</p>
+            <p>1）抵押物的保管费用、实现债权费用和代偿后代偿额应发生的利息；</p>
+            <p>2）甲方代偿债权银行方本息及甲方的代偿损失；</p>
+            <p>3）甲方收取乙方的违约金；</p>
+            <p>4）甲方代债权银行方收缴其与乙方所约定的有关违约金；</p>
+            <p>5）补偿上述款项后，仍有剩余，剩余部分返还乙方。</p>
+            <p>（二）在代偿范围内，接管一切为债权而设立的任何担保物及其它为该债权而设立的借款反担保的求偿权，乙方应该履行其作为债务人所应履行的一切义务。</p>
+            <p>（三）拍卖或变卖财产担保所得价款不足补偿甲方代偿贷款方本息及甲方的代偿损失时，向乙方继续追偿。</p>
+            <p>（四）甲方认为必要和可能的其他措施。</p>
+            <p>十五、义务的连续性</p>
+            <p>
+                本合同项下乙方的一切义务均具有连续性，对其继承人、接管人、受让人及其合并、改组、更改名称等后的主体均具有完全的约束力，不受任何争议、索赔和法律程序及上级单位任何指令和乙方与任何自然人或法人签订的任何合同、文件的影响，也不因乙方破产、无力偿还债务、丧失企业资格、更改组织章程以及发生任何本质上的变更而有任何改变。</p>
+            <p>十六、通知送达条款</p>
+            <p>甲乙双方就本合同中涉及各类通知、协议等文件及就合同发生纠纷时相关文件和法律文书送达时的送达地址及法律后果作如下约定：</p>
+            <p>（一）甲乙双方确认的有效送达地址如下：</p>
+            <p>如至甲方：</p>
+            <p>地址：武科西五路360号西部智谷B区2栋4单元4楼（武侯政务服务中心背后）</p>
+            <p>电话：028-85566171</p>
+            <p>传真：028-85566171</p>
+            <p>邮政编码：610041</p>
+            <p>收件人：成都武侯中小企业融资担保有限责任公司</p>
+            <p>如至乙方：</p>
+            <p>地址：<strong><u>{{ agree_obj.lending.summary.custom.contact_addr }}</u></strong></p>
+            <p>电话：<strong><u>{{ agree_obj.lending.summary.custom.contact_num }}</u></strong></p>
+            <p>收件人：<strong><u>{{ agree_obj.lending.summary.custom.linkman }}</u></strong></p>
+            <p>（二）甲乙双方确认上述送达地址适用范围包括非诉时各类通知、协议等文件以及就合同发生纠纷时相关文件和法律文书的送达，同时包括在争议进入仲裁、民事诉讼程序后的一审、二审、再审和执行程序。</p>
+            <p>（三）双方的送达地址需要变更时应向对方履行书面的通知义务；仲裁及民事诉讼阶段当事人地址变更时应当向仲裁机构、人民法院履行送达地址变更通知义务。未履行以上通知义务的，双方确认的送达地址仍视为有效送达地址。</p>
+            <p>任何一方未按前述方式履行通知义务，双方所确认的送达地址仍视为有效送达地址。</p>
+            <p>（四）双方将按如下规定确定通知送达被视为正式送达的日期；</p>
+            <p>1、直接送达：以专人直接递送的，接收人(包括本合同指定收件人、法定代表人及其指定的接收人）签收之日视为送达。</p>
+            <p>2、邮寄送达：</p>
+            <p>（1）以特快专递形式发出的，发往本市市内的，发出后第二日视为送达；发往内地其他地区的，发出后第三日视为送达；发往港、澳、台地区的，发出后第四日视为送达；发往境外其他国家或地区的，发出后第六日视为送达。</p>
+            <p>（2）以挂号方式发出的，发往本市的，邮寄后第三日视为送达；发往内地区的，发出后第四日视为送达；发往港、澳、台地区的，发出后第五日视为送达；发往境外其他国家或地区的，发出后第七日视为送达。</p>
+            <p>（五）因以下情形导致法律文书未能被当事人接受的，依然产生送达的法律后果：</p>
+            <p>1、因当事人提供或者确认的送达地址不准确的；</p>
+            <p>2、送达地址变更后未及时书面告知对方和仲裁机构、人民法院的；</p>
+            <p>3、当事人或有权签收人拒绝签收的。</p>
+            <p>发生上述情形时，适用本条第（四）款。</p>
+            <p>
+                （六）履行送达地址变更通知义务的，以变更后的送达地址为有效送达地址。对于上述当事人在合同中明确约定的送达地址，法院进行送达时可直接邮寄送达，即使当事人未能收到法院邮寄送达的文书，由于其在合同中的约定，也应当视为送达。</p>
+            <p>
+                （七）纠纷进入仲裁、民事诉讼程序后，如当事人应诉并直接向仲裁机构、法院提交送达地址确认书，该确认地址与本合同的送达地址不一致的，以向仲裁机构、法院提交确认的送达地址为准。送达地址确认书中载明的送达地址为律师或委托代理人地址的，本合同的确认的送达地址同时有效。</p>
+            <p>本约定作为合同中独立存在的条款，不受合同其他条款效力的影响。</p>
+            <p>十七、甲乙双方同意约定的其他事项：</p>
+            <p> 此栏空白</p>
+            <p>十八、因本协议发生的争议，经协商不能达成一致意见，应向本合同签订地人民法院提起诉讼，本合同签订地为成都市武侯区。</p>
+            <p>十九、本协议经甲方与乙方加盖公章且法定代表人签章即生效。</p>
+            <p>二十、其他</p>
+            <p>（一）本合同未尽事宜，甲乙双方可另行达成书面协议，作为本合同附件。本合同的任何附件、修改或补充均构成本合同不可分割的一部分，与本合同具有同等的法律效力。</p>
+            <p>（二）本合同独立于其他关联合同，其他关联合同的无效并不导致本合同无效。如本合同的某条款或某条款的部分内容被认定无效，该无效条款或该无效部分并不影响本合同及本合同其他条款或该条款其他内容的有效性。</p>
+            <p>（三）本合同正本一式肆份，甲方执壹份，乙方执壹份，登记机关贰份。具有同等的法律效力。</p>
+            <p>声明：乙方已阅读本合同所有条款。应乙方要求，甲方已经就本合同做了相应的条款说明。乙方对本合同条款的含义及相应的法律后果已全部通晓并充分理解。</p>
+            <p>乙方确认：</p>
+            <p><strong><u>{{ agree_obj.lending.summary.custom.name }}</u></strong></p>
+        </div>
+        <div class="split">
+            <p>(此页无正文)</p>
+            <div style="margin-left: 280px">
+                <p>甲方（公章或合同专用章）：成都武侯中小企业融资担保有限责任公司</p>
+                <p>法定代表人（或授权代理人）：何长见</p>
+                <p>（签字或盖章）</p>
+                <p>年 月 日</p>
 
 
-<p>担保方（甲方）：成都武侯中小企业融资担保有限责任公司</p>
-<p>住所（地址）：成都市武侯区武青南路33号(武侯新城管委会内)</p>
-<p>法定代表人：何长见</p>
+                <p>乙方（公章或合同专用章）：<strong><u>{{ agree_obj.lending.summary.custom.name }}</u></strong></p>
+                <p>
+                    法定代表人（或授权代理人）：<strong><u>{{ agree_obj.lending.summary.custom.company_custome.representative }}</u></strong>
+                </p>
+                <p>（签字或盖章）</p>
+                <p>年 月 日</p>
 
 
-<p>被担保方（乙方）：{{ agree_obj.article.custom.name }}</p>
-<p>住所（地址）：{{ agree_obj.article.custom.company_custome.registered_addr }}</p>
-<p>法定代表人：{{ agree_obj.article.custom.company_custome.representative }}</p>
+            </div>
+        </div>
+    </div>
 
+{% endblock %}
 
-<p>
-    根据乙方申请，甲方决定为乙方在{{ agree_obj.branch }}的一系列债务（包括借款或承兑汇票、保函等）提供连带责任保证担保。为明确各自的权利、义务，甲乙双方遵照有关法律规定，经协商一致，订立本合同，以便共同遵守执行。</p>
-<p>一、甲乙双方遵循平等、自愿、公平、诚实信用原则订立本合同。</p>
-<p>二、甲方同意为乙方自 年 月 日至 年 月
-    日期间，向债权人（或受益人）{{ agree_obj.branch }}申请限额（即最高额限额）为人民币{{ agree_obj.agree_amount }}万元（大写：柒佰万元整）的一系列债务（包括但不限于：人民币借款、银行承兑汇票扣除保证金后的差额票款、保函等）提供担保。上述一系列债务的保证合同包括但不限于：</p>
-
-<p>（一）担保范围：与甲方与债权人（或受益人）自 年 月 日至 年 月 日期间签订的一系列保证合同或保函一致。</p>
-<p>（二）担保期限：与甲方与债权人（或受益人）自 年 月 日至 年 月 日期间签订的每笔保证合同或保函中约定的保证期间一致，但担保期限不超过限期内最后一笔债务履行期届满之日后两年。</p>
-<p>（三）乙方在办理最高额限额内的每笔融资业务时，应提前向甲方申请，经甲方审批同意后再与债权银行签订相关合同或出具放款通知书后方可使用。</p>
-<p>超出以上限额和期限以及未经甲方认可同意的任何款项，甲方不承担担保责任。</p>
-<p>三、甲方可根据乙方的信用情况，向乙方收取人民币 元（大写：
-    元整）担保风险保证金，并由乙方在本合同签订后3个工作日内支付至甲方指定账户。在乙方完全履行完由甲方担保的债务后，甲方将上述保证金无息退还乙方，如乙方不履行债务，上述保证金将作为违约金，甲方不予退还。</p>
-<p>四、甲方代乙方履行付款责任后，乙方应立即向甲方归还下列款项：</p>
-（一）甲方向银行代付的金额和自代付之日起的利息。
-（二）甲方实现债权的调查、诉讼、律师费用及其它损失。
-五、甲方有权在代付范围内，接管一切为债权而设立的任何担保物及其它向乙方债务提供反担保的求偿权，乙方应该履行其作为债务人所应履行的一切义务。
-乙方向甲方提供的全部反担保行为对甲方为乙方在上述期间发生的每一笔担保均承担反担保责任。
-六、担保综合费的收取
-（一）收取标准：按以下第 4） 项收取担保综合费：
-1）担保品种为人民币借款时，每年按担保本金总额的 收取，不足一年的，按一年收取；
-2）担保品种为银行承兑汇票时，3个月期限承兑每次按担保总额的 /年一次性收取，6个月期限承兑每次按担保总额的 /年/次收取；
-3）担保品种为保函时：A、按次收取：每次按担保敞口总额的 %收取；B、按担保时间收取：每月按担保敞口总额的 % 收取。C、按年收取：每年按担保敞口总额的 %收取；
-4）按以下约定执行：按担保本金总额的2.1%/年收取[含税]，不足一年的，按一年收取。 。
-（二）具体数额：按以下第 2）项执行：
-1）一次收取担保综合费金额为：人民币 ；
-2）按签订《同意放款确认书》或《保证合同》、《保函》时确认的担保额度以本合同确定的担保综合费率计算收取；
-3）如担保债务有中长期贷款，则分别为：第一年 万元；第二年 万元；第三年 万元、第四年 万元；第五年 万元；
-4） 。
-（三）收取时间：按以下第 2） 项执行：
-1）乙方于甲方与债权银行或受益人签订《保证合同》前将该笔担保所涉及的担保综合费款项支付给甲方；
-2）乙方于甲方每次向债权方出具《同意放款确认书》前将该笔担保所涉及的担保综合费款项支付给甲方；
-3）于担保期内每年的 月 日前支付当年的担保综合费；
-4）乙方于 前将该笔担保所涉及的担保综合费款项支付给甲方；
-5） 。
-（四）收取方式：现金或转账支付。
-（五）乙方未在上述规定的时间内按时足额支付担保综合费的，甲方有权在乙方足额支付担保综合费之前拒绝与其债权人签订担保合同，乙方应按未付担保综合费金额的0.08%/日支付违约金。担保期内，乙方提前履行甲方担保债务，甲方所收担保费皆不退还。
-七、甲方的权利义务
-（一）甲方有权对乙方的经营情况及借款的使用情况进行检查和了解。
-（二）甲方有权按照本合同第三条、第六条约定向乙方按时足额收取保证金、担保费。
-（三）甲方应对乙方提供的有关乙方的资料、文件、信息保密，但法律、法规规定的，司法、仲裁或其他类似程序或有关监督部门和其他有权机构要求披露的或本合同另有约定的除外。
-八、乙方的权利义务
-（一）乙方必须按其与债权银行签订的借款合同及其他债权文件（以下简称“主债权合同”）约定的还款方式、时间、数额严格执行还款计划。
-（二）担保期间，乙方应当每季度末结束后15日内向甲方提供资产负债表、损益表及现金流量表等财务报告及财务状况说明书。甲方可定期或不定期对乙方的生产、经营及财务状况及资金使用情况进行监督，乙方应积极配合，不得以任何理由推诿、搪塞。
-（三）未经甲方书面同意，不得擅自与债权银行方修改主债权合同。
-（四）担保期间，乙方因经营、资产变动、行政处罚、诉讼等重大事项，可能增加甲方的担保风险或加重甲方担保责任情形的，应立即通知甲方。
-（五）债权银行通知甲方代偿乙方的债务时，甲方不需经乙方同意即可代偿。
-（六）实施以下行为之一的，乙方应提前三十日书面通知甲方并征得甲方书面同意：
-1）乙方改变经营决策，包括但不限于转股、改组、合并、分立、股份制改造、合资、合作、联营、承包、租赁、经营范围和注册资本变更等可能影响甲方权益的情形；
-2）乙方举借新债、对外担保等实施可能影响甲方作为保证人利益的其他重大经营决策时；
-3）乙方出租、出售、转移、转让其甲方认为足以影响其偿债能力的财产或/和其合法财产性权利的。
-九、乙方向甲方提供反担保时，应签订相应的《最高额抵押反担保合同》、《最高额质押反担保合同》、《最高额保证反担保合同》并承诺下述事项：
-（一）与财产抵押物、质押物、保证相关的一切费用，包括但不限于评估、保险、鉴定、登记、保管、公证等费用均由乙方承担。
-（二）乙方负责办理抵押物在抵押期间的财产保险，并应如实告知保险人被保险财产已经抵押给甲方的事实，且要求保险人以保险批单形式予以注明相关信息和未经甲方同意，保险人不得直接将保险金给付乙方的意思表示的承诺。保险单由甲方代为保管。乙方投保的保险期间期限至少应长于票据及贷款期限六个月（若乙方担保的票据及贷款系分批到期，则保险期间至少应长于最后一笔到期后六个月）。
-（三）《最高额抵押反担保合同》、《最高额质押反担保合同》项下反担保的抵押物、质押物价值减少时，乙方应在三十日内向甲方提供甲方认可的，与该抵押物、质押物减少的价值额相当的新担保。
-（四）乙方向甲方提供的所有反担保措施落实前，未经甲方确认，乙方不得使用上述贷款。
-十、抵押、质押期间，抵押物、质押物如发生投保范围的损失，或者因其他第三人行为导致抵押物价值减少，保险赔偿金或损害赔偿金应作为抵押、质押物，由乙方存入甲方指定的账户，抵押、质押期间，未经甲方书面同意，乙方不得单方面动用。
-十一、由第三人为乙方向甲方提供财产进行反担保的，本合同第九条所列之条款由乙方和第三人承担履行责任。
-十二、合同的变更和解除
-（一）本合同生效后，甲乙任何一方不得擅自变更和解除本合同。
-（二）未经甲方书面同意，乙方不得采取任何方式转移或者变相转移本合同项下的权利、义务。
-（三）乙方如将本合同项下的权利、义务转让给第三方，应事先经甲方书面同意，其转让行为在受让单位和甲方重新签订协议书后生效。
-（四）甲乙任何一方发生合并、分立、承包及股份制改造等转制变更时，由变更后法人承担或连带承担履行本合同的义务，享有应有的权利。
-十三、违约责任
-（一）本合同生效后，甲乙双方均应履行本合同约定的义务，任何一方不履行或不完全履行本合同约定义务的，应当承担相应的违约责任。
-（二）在本合同履行过程中，如发生以下情形之一的，即视为乙方违约，乙方应向甲方支付本合同约定担保最高限额的5%的违约金。
-1）乙方不履行本合同约定的任何一项义务；
-2）乙方违反主债权合同约定，致使甲方代偿的；
-3）乙方没有按期偿还与主债权合同项下的贷款本金、利息；
-4）乙方向甲方提供的所有反担保措施未落实前，未经甲方确认，乙方擅自使用上述贷款的；
-5）向甲方提供财产担保的乙方（或第三人）违反财产担保协议或担保财产明显贬值，乙方又无法落实甲方认可的新的担保财产时；
-6）乙方向甲方提供虚假资料，骗取甲方提供担保的；
-7）乙方出现欠息、经营状态明显恶化、发生严重安全、质量、公共事故，或其他突发事件、涉诉或重大法律纠纷、拖欠职工工资、财务指标异常或恶化、资金大量异常移动 、企业非正常停产、企业负责人失去联系、企业骨干多人离职等不安事项；
-8）乙方及财产担保人发生了其他足以影响其偿债能力或缺乏偿债诚意的状况及行为；
-9）乙方违反主债权合同的约定或者发生主债权合同项下的违约事项，致使银行要求甲方承担担保责任的；
-10）乙方发生危及、损害或可能危及、损害甲方权益的其他事项。
-（三）乙方不履行本协议第七条、第八条、第九条，以及出现上述第十三条第二款情形之一，甲方有权行使下述一项或几项措施，乙方对此没有异议:
-1）要求乙方、担保人限期纠正其违约行为；
-2）要求乙方赔偿因违约而给甲方造成的损失；
-3）要求乙方支付甲方本合同约定担保最高限额的5%的违约金；
-4）要求乙方在甲方规定的期限内提前偿还全部借款本息，同时有权要求贷款银行停止发放尚未划付的贷款、提前收回已发放的贷款本息，如贷款银行怠于提前收贷，或乙方资金不能保证提前偿还全部借款本息时，甲方有权在约定担保责任范围内提前对乙方进行诉讼追偿并采取财产保全措施或处置担保财产，乙方不能以任何理由抗辩；
-5）甲方代乙方履行付款责任后，要求乙方立即归还下列款项：
-甲方向银行代偿的金额和自代偿之日起的利息（按银行同期贷款基准利率 4 倍计息）；
-甲方因实现债权所发生的各项费用（包括但不限于诉讼费、差旅费、律师费、财产保全费、公证费、鉴定费、翻译费、评估拍卖费等）；
-（四）在本合同履行过程中，如因乙方违反本合同、反担保合同约定，致使银行贷款不予/不能发放或乙方主动放弃银行贷款的，乙方应向甲方支付拟贷款金额1%的尽职调查费，甲方可以从乙方已缴纳的担保费用中直接扣除。
-十四、甲方代乙方履行清偿义务后，甲方有权以抵押物折价或从拍卖、变卖抵押物所得价款中优先受偿。
-（一）分配顺序如下：
-1）抵押物的保管费用、实现债权费用和代偿后代偿额应发生的利息；
-2）甲方代偿债权银行方本息及甲方的代偿损失；
-3）甲方收取乙方的违约金；
-4）甲方代债权银行方收缴其与乙方所约定的有关违约金；
-5）补偿上述款项后，仍有剩余，剩余部分返还乙方。
-（二）在代偿范围内，接管一切为债权而设立的任何担保物及其它为该债权而设立的借款反担保的求偿权，乙方应该履行其作为债务人所应履行的一切义务。
-（三）拍卖或变卖财产担保所得价款不足补偿甲方代偿贷款方本息及甲方的代偿损失时，向乙方继续追偿。
-（四）甲方认为必要和可能的其他措施。
-十五、义务的连续性
-本合同项下乙方的一切义务均具有连续性，对其继承人、接管人、受让人及其合并、改组、更改名称等后的主体均具有完全的约束力，不受任何争议、索赔和法律程序及上级单位任何指令和乙方与任何自然人或法人签订的任何合同、文件的影响，也不因乙方破产、无力偿还债务、丧失企业资格、更改组织章程以及发生任何本质上的变更而有任何改变。
-十六、通知送达条款
-甲乙双方就本合同中涉及各类通知、协议等文件及就合同发生纠纷时相关文件和法律文书送达时的送达地址及法律后果作如下约定：
-（一）甲乙双方确认的有效送达地址如下：
-如至甲方：
-地址：武科西五路360号西部智谷B区2栋4单元4楼（武侯政务服务中心背后）
-电话：028-85566171
-传真：028-85566171
-邮政编码：610041
-收件人：成都武侯中小企业融资担保有限责任公司
-如至乙方：
-地址：成都市武侯区武兴二路17号13栋A座7层2号
-电话：13808031590
-收件人：胡丰
-（二）甲乙双方确认上述送达地址适用范围包括非诉时各类通知、协议等文件以及就合同发生纠纷时相关文件和法律文书的送达，同时包括在争议进入仲裁、民事诉讼程序后的一审、二审、再审和执行程序。
-（三）双方的送达地址需要变更时应向对方履行书面的通知义务；仲裁及民事诉讼阶段当事人地址变更时应当向仲裁机构、人民法院履行送达地址变更通知义务。未履行以上通知义务的，双方确认的送达地址仍视为有效送达地址。
-任何一方未按前述方式履行通知义务，双方所确认的送达地址仍视为有效送达地址。
-（四）双方将按如下规定确定通知送达被视为正式送达的日期；
-1、直接送达：以专人直接递送的，接收人(包括本合同指定收件人、法定代表人及其指定的接收人）签收之日视为送达。
-2、邮寄送达：
-（1）以特快专递形式发出的，发往本市市内的，发出后第二日视为送达；发往内地其他地区的，发出后第三日视为送达；发往港、澳、台地区的，发出后第四日视为送达；发往境外其他国家或地区的，发出后第六日视为送达。
-（2）以挂号方式发出的，发往本市的，邮寄后第三日视为送达；发往内地区的，发出后第四日视为送达；发往港、澳、台地区的，发出后第五日视为送达；发往境外其他国家或地区的，发出后第七日视为送达。
-（五）因以下情形导致法律文书未能被当事人接受的，依然产生送达的法律后果：
-1、因当事人提供或者确认的送达地址不准确的；
-2、送达地址变更后未及时书面告知对方和仲裁机构、人民法院的；
-3、当事人或有权签收人拒绝签收的。
-发生上述情形时，适用本条第（四）款。
-（六）履行送达地址变更通知义务的，以变更后的送达地址为有效送达地址。对于上述当事人在合同中明确约定的送达地址，法院进行送达时可直接邮寄送达，即使当事人未能收到法院邮寄送达的文书，由于其在合同中的约定，也应当视为送达。
-（七）纠纷进入仲裁、民事诉讼程序后，如当事人应诉并直接向仲裁机构、法院提交送达地址确认书，该确认地址与本合同的送达地址不一致的，以向仲裁机构、法院提交确认的送达地址为准。送达地址确认书中载明的送达地址为律师或委托代理人地址的，本合同的确认的送达地址同时有效。
-本约定作为合同中独立存在的条款，不受合同其他条款效力的影响。
-十七、甲乙双方同意约定的其他事项：
-此栏空白
-十八、因本协议发生的争议，经协商不能达成一致意见，应向本合同签订地人民法院提起诉讼，本合同签订地为成都市武侯区。
-十九、本协议经甲方与乙方加盖公章且法定代表人签章即生效。
-二十、其他
-（一）本合同未尽事宜，甲乙双方可另行达成书面协议，作为本合同附件。本合同的任何附件、修改或补充均构成本合同不可分割的一部分，与本合同具有同等的法律效力。
-（二）本合同独立于其他关联合同，其他关联合同的无效并不导致本合同无效。如本合同的某条款或某条款的部分内容被认定无效，该无效条款或该无效部分并不影响本合同及本合同其他条款或该条款其他内容的有效性。
-（三）本合同正本一式肆份，甲方执壹份，乙方执壹份，登记机关贰份。具有同等的法律效力。
-声明：乙方已阅读本合同所有条款。应乙方要求，甲方已经就本合同做了相应的条款说明。乙方对本合同条款的含义及相应的法律后果已全部通晓并充分理解。
-乙方确认：
-四川经纬印务有限公司
-
-
- 
-(此页无正文)
-
-甲方（公章或合同专用章）：成都武侯中小企业融资担保有限责任公司
-法定代表人（或授权代理人）：何长见
-（签字或盖章）
-年 月 日
-
-
-乙方（公章或合同专用章）：四川经纬印务有限公司
-法定代表人（或授权代理人）：舒燕秋
-（签字或盖章）
-
-
-年 月 日
- 
-
-
-（此页无正文）
-
-
-</body>
-</html>
