--- a/A_dbms/templates/dbms/warrant/extra/js-storages-add.html
+++ b/A_dbms/templates/dbms/warrant/extra/js-storages-add.html
@@ -37,10 +37,10 @@
                         window.location.reload();
                     } else {
                         alert(arg.message);
-
                         $('#e_storage_typ').text(arg.forme.storage_typ);
                         $('#e_storage_date').text(arg.forme.storage_date);
-                        $('#e_transfer_builder').text(arg.forme.transfer_builder);
+                        $('#e_transfer').text(arg.forme.transfer);
+                        $('#e_storage_explain').text(arg.forme.storage_explain);
                     }
                 }
             })
