--- a/A_dbms/templates/dbms/article/article/article-table.html
+++ b/A_dbms/templates/dbms/article/article/article-table.html
@@ -10,11 +10,12 @@
             <th>项目助理</th>
             <th>风控专员</th>
             <th>提交日期</th>
-            <th>反馈日期</th>
+            {#            <th>反馈日期</th>#}
             <th>加权通知金额</th>
             <th>放款金额</th>
             <th>还款金额</th>
-{#            <th>风险分类</th>#}
+            <th>在保余额</th>
+            {#            <th>风险分类</th>#}
             <th>项目状态</th>
         </tr>
         </thead>
@@ -33,11 +34,12 @@
                 <td>{{ article.assistant.name }}</td>
                 <td>{{ article.control.name }}</td>
                 <td>{{ article.build_date }}</td>
-                <td>{{ article.article_date|default_if_none:"" }}</td>
+                {#                <td>{{ article.article_date|default_if_none:"" }}</td>#}
                 <td align="right">{{ article.article_notify_sum }}</td>
                 <td align="right">{{ article.article_provide_sum }}</td>
                 <td align="right">{{ article.article_repayment_sum }}</td>
-{#                <td>{{ article.get_classification_display }}</td>#}
+                <td align="right">{{ article.article_balance }}</td>
+                {#                <td>{{ article.get_classification_display }}</td>#}
                 {#方式一：推荐#}
                 <td>{{ article.get_article_state_display }}</td>
             </tr>
