--- a/A_dbms/templates/dbms/external/cooperative/cooperative-filter.html
+++ b/A_dbms/templates/dbms/external/cooperative/cooperative-filter.html
@@ -30,6 +30,6 @@
         </label>
     {% endif %}
     <label>
-        综合额度：{{ flow_credit_amount }}，保函额度：{{ back_credit_amount }}
+        综合额度：{{ flow_credit_amount }}，在保余额：{{ balance }}
     </label>
 </div>
