--- a/A_dbms/templates/dbms/provide/notify/notify-table.html
+++ b/A_dbms/templates/dbms/provide/notify/notify-table.html
@@ -11,6 +11,7 @@
             <th>通知日期</th>
             <th>放款金额</th>
             <th>还款金额</th>
+            <th>在保余额</th>
             {#            <th>借款合同</th>#}
             {#            <th>保证合同</th>#}
         </tr>
@@ -27,6 +28,7 @@
                 <td>{{ notify.notify_date }}</td>
                 <td align="right">{{ notify.notify_provide_sum }}</td>
                 <td align="right">{{ notify.notify_repayment_sum }}</td>
+                <td align="right">{{ notify.notify_balance }}</td>
                 {#                <td>{{ notify.contracts_lease }}</td>#}
                 {#                <td>{{ notify.contract_guaranty }}</td>#}
             <tr>
