--- a/A_dbms/templates/dbms/external/cooperative/cooperative-filter.html
+++ b/A_dbms/templates/dbms/external/cooperative/cooperative-filter.html
@@ -30,6 +30,6 @@
         </label>
     {% endif %}
     <label>
-        综合额度：{{ flow_credit_amount }}，在保余额：{{ balance }}
+        授信额度：{{ flow_credit_amount }}，在保余额：{{ balance }}（流贷：{{ flow_amount }}，承兑：{{ accept_amount }}，保函：{{ back_amount }}）
     </label>
 </div>
