--- a/A_dbms/templates/dbms/provide/provide_scan/provide-summry-body.html
+++ b/A_dbms/templates/dbms/provide/provide_scan/provide-summry-body.html
@@ -1,7 +1,7 @@
 <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-    客户名称：{{ provide_obj.notify.agree.lending.summary.custom }}</label>
+    客户名称：{{ provide_obj.notify.agree.lending.summary.custom.short_name }}</label>
 <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-    放款银行：{{ provide_obj.notify.agree.branch }}</label>
+    放款银行：{{ provide_obj.notify.agree.branch.short_name }}</label>
 <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
     委托合同：{{ provide_obj.notify.agree.agree_num }}</label>
 <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
